--- a/index.html
+++ b/index.html
@@ -11,20 +11,44 @@
     <title>Hello, User!</title>
   </head>
   <body>
+	  
+	<!-- Main  -->
 	<div class="container">
 		<h1 class="text-center mt-5">Sign In</h1>
 		<form>
 		  <div class="form-group">
 			<label for="exampleInputEmail1">User Name</label>
-			<input type="text" class="form-control" id="exampleInputUserName1" aria-describedby="emailHelp">
+			<input type="text" class="form-control" id="exampleInputUserName1" aria-describedby="usernameHelp" required>
 		  </div>
 		  <div class="form-group">
 			<label for="exampleInputPassword1">Password</label>
-			<input type="password" class="form-control" id="exampleInputPassword1">
+			<input type="password" class="form-control" id="exampleInputPassword1" required>
 		  </div>
-		  <button type="submit" class="btn btn-primary">Submit</button>
+		  <input type="submit" class="btn btn-primary">
+		  <!-- <input type="submit" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal"> -->
 		</form>
 	</div>
+	  
+	<!-- Modal -->
+	<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+	  <div class="modal-dialog">
+		<div class="modal-content">
+		  <div class="modal-header">
+			<h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+			<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+			  <span aria-hidden="true">&times;</span>
+			</button>
+		  </div>
+		  <div class="modal-body">
+			...
+		  </div>
+		  <div class="modal-footer">
+			<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+			<button type="button" class="btn btn-primary">Save changes</button>
+		  </div>
+		</div>
+	  </div>
+	</div>  
     
 
     <!-- Optional JavaScript -->
@@ -32,6 +56,6 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-	<script src="script.js"></script>
+	<script src="script.js"></script>	
   </body>
 </html>
