--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<!-- Main  -->
 	<div class="container">
 		<h1 class="text-center mt-5">Sign In</h1>
-		<form>
+		<form action="#">
 		  <div class="form-group">
 			<label for="exampleInputEmail1">User Name</label>
 			<input type="text" class="form-control" id="exampleInputUserName1" aria-describedby="usernameHelp" required>
@@ -24,8 +24,7 @@
 			<label for="exampleInputPassword1">Password</label>
 			<input type="password" class="form-control" id="exampleInputPassword1" required>
 		  </div>
-		  <input type="submit" class="btn btn-primary">
-		  <!-- <input type="submit" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal"> -->
+		  <input type="submit" class="btn btn-primary" id="submit" value="Submit">
 		</form>
 	</div>
 	  
@@ -56,6 +55,6 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-	<script src="script.js"></script>	
+	<script src="scripts/script.js"></script>	
   </body>
 </html>
