--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
 			<label for="exampleInputPassword1">Password</label>
 			<input type="password" class="form-control" id="exampleInputPassword1" required>
 		  </div>
+			<div class="form-group">
+			<label for="inputCountryCode">Country Code</label>
+			<input type="text" class="form-control" id="inputCountryCode" maxlength="2">
+		  </div>	
 		  <input type="submit" class="btn btn-primary" id="submit" value="Submit">
 		</form>
 	</div>
