minlength of country code input form is now 2

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		  </div>
 			<div class="form-group">
 			<label for="inputCountryCode">Country Code</label>
-			<input type="text" class="form-control" id="inputCountryCode" maxlength="2">
+			<input type="text" class="form-control" id="inputCountryCode" minlength="2" maxlength="2">
 		  </div>	
 		  <input type="submit" class="btn btn-primary" id="submit" value="Submit">
 		</form>
